Fix MORE READ section IE layout

--- a/sass/_more-read.sass
+++ b/sass/_more-read.sass
@@ -39,6 +39,9 @@
 .more-read .slider .article--m:last-child
   margin-left: 0
 
+.more-read i
+  cursor: pointer
+
 
 @media only screen and (min-width: $break-mob) and (max-width: $break-tab)
 
